# habit_manager

./: .env.example  .gitignore  README.md  develop_plan.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  .flake8  Dockerfile  README.md  alembic.ini  package.json  pyproject.toml  requirements.txt  test.db
backend/alembic/: __init__.py  env.py
backend/alembic/versions/: .gitkeep  c7c2c5a640dd_initial_migration.py
backend/app/: main.py
backend/app/controllers/: __init__.py  auth.py  habit.py  habit_log.py  user.py
backend/app/core/: __init__.py  config.py  deps.py  minio.py  security.py
backend/app/db/: __init__.py  base.py  base_class.py  session.py
backend/app/models/: file.py  habit.py  habit_log.py  user.py
backend/app/schemas/: habit.py  habit_log.py  user.py
backend/app/services/: __init__.py  base.py  file.py  habit.py  habit_log.py  user.py
backend/tests/: __init__.py  conftest.py
backend/tests/services/: __init__.py  test_file_service.py  test_habit_log_service.py  test_habit_service.py  test_user_service.py
frontend/: .env.example  Dockerfile  eslint.config.js  package.json  package.json additions  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/habits/: CompletionStat.tsx  HabitCard.tsx  HabitForm.tsx  HabitList.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  MainLayout.tsx
frontend/src/pages/: AddHabitPage.tsx  DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx  SignupPage.tsx
frontend/src/services/: api.ts  auth.ts  habit.ts  habitLog.ts
